--- a/src/server/templates/handlebars/basic.html
+++ b/src/server/templates/handlebars/basic.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>{{title}}</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<!--<script src="/_static/scripts/thebroomstack.js"></script>-->
+	<script src="http://localhost:8080/scripts/thebroomstack.js"></script>
+	<script src="http://localhost:8080/webpack-dev-server.js"></script>
 </head>
 <body>
 {{body}}
