--- a/src/server/templates/handlebars/basic.html
+++ b/src/server/templates/handlebars/basic.html
@@ -5,10 +5,12 @@
 	<title>{{title}}</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<!--<script src="/_static/scripts/thebroomstack.js"></script>-->
-	<script src="http://localhost:8080/scripts/thebroomstack.js"></script>
 	<script src="http://localhost:8080/webpack-dev-server.js"></script>
+	<script src="http://localhost:8080/scripts/thebroomstack.js"></script>
 </head>
 <body>
-{{body}}
+	<div id="app">
+
+	</div>
 </body>
 </html>
