--- a/src/server/templates/handlebars/basic.html
+++ b/src/server/templates/handlebars/basic.html
@@ -9,8 +9,6 @@
 	<script src="http://localhost:8080/scripts/thebroomstack.js"></script>
 </head>
 <body>
-	<div id="app">
-
-	</div>
+	<div id="app">{{body}}</div>
 </body>
 </html>
